--- a/css/styles.css
+++ b/css/styles.css
@@ -16,19 +16,20 @@ body {
   background: #ffffff;
   color: var(--primary-text-color);
   font-family: Roboto, Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
+
 .list {
   list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
-.logo,
-a {
-  text-decoration: none;
-}
-.hero-btn,
-.filter-btn {
-  font-family: inherit;
+.conteiner {
+  width: 1200px;
+  margin: 0 auto;
 }
 /* оформление логотипа */
+
 .logo {
   color: var(--accent-color);
   font-family: Raleway;
@@ -39,7 +40,28 @@ a {
 .logo-header {
   color: var(--primary-title-color);
 }
+.logo,
+a {
+  text-decoration: none;
+}
 /* оформление навигаци по сайту */
+.header {
+  display: flex;
+  flex-direction: row;
+}
+.nav-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.nav-item + .nav-item {
+  margin-left: 50px;
+}
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  margin-left: 93px;
+}
 .nav-link {
   font-weight: 500;
   font-size: 14px;
@@ -50,6 +72,13 @@ a {
 .nav-link:hover,
 .nav-link:focus {
   color: var(--accent-color);
+}
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
+.contacts-item + .contacts-item {
+  margin-left: 50px;
 }
 .contact-link {
   font-weight: 500;
@@ -65,26 +94,38 @@ a {
 /* оформление секции герой */
 .hero {
   background-color: var(--top-section-background-color);
+  text-align: center;
 }
 .hero-title {
+  margin: 0px auto;
   color: var(--main-text-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
 .hero-btn {
+  display: inline-block;
+  cursor: pointer;
+  padding: 10px 32px;
+  margin-top: 30px;
+  border-radius: 4px;
+  min-width: 200px;
+
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--main-text-color);
-  cursor: pointer;
 }
 .hero-btn:hover,
 .hero-btn:focus {
+  display: inline-block;
   background-color: #188cef;
   cursor: pointer;
+}
+.hero-btn,
+.filter-btn {
+  font-family: inherit;
 }
 /* оформление секции  about*/
 .title {
@@ -138,13 +179,16 @@ a {
 }
 /* оформление портфолио */
 .filter-btn {
+  display: inline-block;
+  padding: 6px 22px;
+  border-radius: 4px;
+  cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-title-color);
-  cursor: pointer;
 }
 .filter-btn:hover,
 .filter-btn:focus {
