--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,11 @@ a {
 .team-item {
   background-color: #fff;
   border-radius: 3px;
+  padding-bottom: 30px;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .team-item:not(:last-child) {
   margin-right: 30px;
@@ -272,9 +277,6 @@ a {
   padding-top: 77px;
   padding-bottom: 94px;
 }
-.portfolio-container {
-  border-top: 16px solid #c4c4c4;
-}
 .portfolio-list {
   display: flex;
   justify-content: center;
@@ -326,12 +328,11 @@ a {
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
-
-.company-projects:nth-child(n + 6) {
-  margin-bottom: 94px;
+.company-projects:nth-child(-n + 6) {
+  margin-bottom: 30px;
 }
 .projects-description {
   border: 1px solid var(--card-border-color);
   border-top: none;
-  /* padding: 20px 0px 20px 24px; */
+  padding: 20px 24px;
 }
